--- a/blurview/build.gradle
+++ b/blurview/build.gradle
@@ -9,19 +9,19 @@ plugins {
 //https://blog.csdn.net/java04/article/details/123574708
 def properties = new Properties()
 properties.load(rootProject.file("local.properties").newInputStream())
-def gitUser = properties.getProperty("gitUser")
-def gitPassWord = properties.getProperty("gitPassWord")
-println 'gitUser=' + gitUser+"gitPassWord="+gitPassWord
+//def gitUser = properties.getProperty("gitUser")
+//def gitPassWord = properties.getProperty("gitPassWord")
+//println 'gitUser=' + gitUser+"gitPassWord="+gitPassWord
 
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.centerzx'//插件id，格式：com.gitee/github.用户名
+                groupId = 'com.github.weixiaozi'//插件id，格式：com.gitee/github.用户名
                 artifactId = 'ShapeBlurView'//插件名称
-                version = '1.0.3'//版本号
-                //引用使用格式：implementation 'com.github.centerzx:ShapeBlurView:1.0.0'
+                version = '1.0.5.1'//版本号
+                //引用使用格式：implementation 'com.github.weixiaozi:ShapeBlurView:1.0.0'
             }
         }
         //jitpack推送授权
